2009-10-19  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Tor Arne Vestbø.

        Introduce new render method on QWebFrame, which supports specifying
        which layers to render (scrollbars, contents, pan-icon).

        * Api/qwebframe.cpp:
        (QWebFramePrivate::renderPrivate):
        (QWebFrame::render):
        * Api/qwebframe.h:
        * Api/qwebframe_p.h:

2009-10-19  Antonio Gomes  <tonikitoo@webkit.org>

        Reviewed by Ariya Hidayat.

        [Qt] Infinite loop (leading to crash) when setting cursor in QGraphicsWebView
        https://bugs.webkit.org/show_bug.cgi?id=30549

        Patch reimplements QGraphicsItem's itemChange method, and make
        CursorChange event to be emitted after cursor has already been
        set.

        QWidget::setCursor send the event just after it sets the cursor,
        then patch makes both behaviors compatible.

        * Api/qgraphicswebview.cpp:
        (QGraphicsWebView::itemChange):
        * Api/qgraphicswebview.h:

2009-10-19  Nate Chapin  <japhet@chromium.org>

        Unreviewed, build fix.

        Update call to FrameLoader::loadFrameRequest().

        * Api/qwebpage.cpp:
        (QWebPage::triggerAction):

2009-10-19  Viatcheslav Ostapenko  <ostapenko.viatcheslav@nokia.com>

        Reviewed by Ariya Hidayat.

        Add QWebElement::render API which allows rendering of single
        element.

        * Api/qwebelement.cpp:
        (QWebElement::render):
        * Api/qwebelement.h:
        * tests/qwebelement/tst_qwebelement.cpp:
        (tst_QWebElement::render):
        * tests/qwebelement/qwebelement.qrc:
        * tests/qwebelement/image.png: Added.

2009-10-19  Markus Goetz <Markus.Goetz@nokia.com>

        Reviewed by Ariya Hidayat.

        QWebPage: Doc: setNetworkAccessManager should only be called once.

        * Api/qwebpage.cpp:

2009-10-19  Antonio Gomes  <tonikitoo@webkit.org>

        Reviewed by Tor Arne.
