@@ -34,6 +34,7 @@
 #include <qwebview.h>
 #include <qwebframe.h>
 #include <qwebsettings.h>
+#include <qwebplugindatabase.h>
 #include <qwebelement.h>
 #include <qwebinspector.h>
 
@@ -232,6 +233,16 @@ protected slots:
         formatMenuAction->setVisible(on);
     }
 
+    void dumpPlugins() {
+        QList<QWebPluginInfo> plugins = QWebSettings::pluginDatabase()->plugins();
+        foreach (const QWebPluginInfo plugin, plugins) {
+            qDebug() << "Plugin:" << plugin.name();
+            foreach (const QWebPluginInfo::MimeType mime, plugin.mimeTypes()) {
+                qDebug() << "   " << mime.name;
+            }
+        }
+    }
+
     void dumpHtml() {
         qDebug() << "HTML: " << view->page()->mainFrame()->toHtml();
     }
@@ -320,6 +331,7 @@ private:
         zoomTextOnly->setChecked(false);
         viewMenu->addSeparator();
         viewMenu->addAction("Dump HTML", this, SLOT(dumpHtml()));
+        viewMenu->addAction("Dump plugins", this, SLOT(dumpPlugins()));
 
         QMenu *formatMenu = new QMenu("F&ormat", this);
         formatMenuAction = menuBar()->addMenu(formatMenu);
